# Q-Investment

./: .gitignore  DEBUG.sh  INDEX.md  INSTALL.bat  INSTALL.ps1  INSTALL.sh  INSTALLATION.md  PROPOSED_IMPROVEMENTS.md  README.md  TROUBLESHOOTING.md  launch-jupyter.sh  pyproject.toml
Examples/: Class-Figures.ipynb  Problem-set-template.ipynb
Figures/: CorporateTaxReduction-ant.txt  ITCIncrease-ant.txt  ITCIncrease.txt  ProductivityIncrease-ant.txt  ProductivityIncrease.txt
